--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.banner.image.location=petBanner.jpg
+spring.banner.image.location=vizsla.jpg
 
 # Internationalization
 spring.messages.basename=messages/messages
